--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -8,9 +8,15 @@
 
 <div class="container body-content">
 
-    <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+    <h3 th:text="${#strings.capitalizeWords(title)}"></h3>
 
     <!-- TODO #3 - Use the same list display from search.html -->
+    <table class="job-listing" th:each="job : ${jobs}"> <!-- jobs is an ArrayList whose items are HashMaps -->
+        <tr th:each="index : ${job}">
+            <td th:text="${index.key}"></td>
+            <td th:text="${index.value}"></td>
+        </tr>
+    </table>
 
 </div>
 
