Fix: Displays results at search and list-jobs

--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,12 +11,7 @@
     <h3 th:text="${#strings.capitalizeWords(title)}"></h3>
 
     <!-- TODO #3 - Use the same list display from search.html -->
-    <table class="job-listing" th:each="job : ${jobs}"> <!-- jobs is an ArrayList whose items are HashMaps -->
-        <tr th:each="index : ${job}">
-            <td th:text="${index.key}"></td>
-            <td th:text="${index.value}"></td>
-        </tr>
-    </table>
+    <table th:replace="search :: searchResults"></table>
 
 </div>
 
